Fixed alignment one single page, image and text start at the same point

--- a/assets/css/theme-style.css
+++ b/assets/css/theme-style.css
@@ -7,6 +7,9 @@ h2 {
   font-family: 'Niramit', sans-serif;
   font-weight: 700;
   font-size: 25px;
+}
+
+.pageTitle {
   margin-top: 1em;
 }
 
